# color-text

./: README.md  pyproject.toml
src/color/: color-text.py  color_text.py
